objects/Fee_History__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_History_Legacy_ID__c</fullName>
        <label>Fee History Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_History__c</fullName>
        <displayFormat>FH-{00000}</displayFormat>
        <label>Fee History #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Contract__c</fullName>
        <label>IMX Contract</label>
        <referenceTo>IMX_Contract__c</referenceTo>
        <relationshipLabel>Fee History</relationshipLabel>
        <relationshipName>Fee_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <label>Fee History</label>
    <nameField>
        <displayFormat>FH-{0000}</displayFormat>
        <label>Fee Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>